# udev-monitor

./: README.md  pyproject.toml
service/: hello.service
tests/: test_udev_monitor.py
udev_monitor/: main.py
